--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,9 +16,15 @@ export(Hurst)
 export(T.level)
 export(X_max)
 export(X_min)
+export(cov_GHBMP)
+export(est_cov)
 export(hclust_hurst)
 export(kmeans_hurst)
+export(shinyapp_sim)
 export(sojourn)
+importFrom(doParallel,registerDoParallel)
+importFrom(foreach,"%dopar%")
+importFrom(foreach,foreach)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,autoplot)
 importFrom(ggplot2,element_text)
@@ -40,12 +46,16 @@ importFrom(ggplot2,theme)
 importFrom(graphics,plot)
 importFrom(matrixStats,sum2)
 importFrom(parallel,clusterExport)
+importFrom(parallel,makeCluster)
 importFrom(parallel,parLapply)
 importFrom(parallel,stopCluster)
 importFrom(parallelly,availableCores)
 importFrom(parallelly,makeClusterPSOCK)
+importFrom(plotly,layout)
+importFrom(plotly,plot_ly)
 importFrom(proxy,dist)
 importFrom(rlang,.data)
+importFrom(shiny,runApp)
 importFrom(stats,approx)
 importFrom(stats,as.dendrogram)
 importFrom(stats,cutree)
