--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ importFrom(plotly,plot_ly)
 importFrom(proxy,dist)
 importFrom(rlang,.data)
 importFrom(shiny,runApp)
+importFrom(shinycssloaders,withSpinner)
 importFrom(stats,approx)
 importFrom(stats,as.dendrogram)
 importFrom(stats,cutree)
