--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,15 +11,22 @@ S3method(autoplot,hc_hurst)
 S3method(autoplot,k_hurst)
 S3method(autoplot,mp)
 export(A.excursion)
+export(Bm)
 export(GHBMP)
 export(Hurst)
-export(T.level)
+export(LFD)
+export(RS_Index)
 export(X_max)
 export(X_min)
 export(cov_GHBMP)
+export(cross_T)
+export(cross_mean)
+export(cross_rate)
 export(est_cov)
 export(hclust_hurst)
 export(kmeans_hurst)
+export(long_streak)
+export(mean_streak)
 export(shinyapp_sim)
 export(sojourn)
 importFrom(doParallel,registerDoParallel)
@@ -28,6 +35,7 @@ importFrom(foreach,foreach)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,autoplot)
 importFrom(ggplot2,element_text)
+importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
@@ -63,4 +71,7 @@ importFrom(stats,loess)
 importFrom(stats,na.omit)
 importFrom(stats,rect.hclust)
 importFrom(stats,rnorm)
+importFrom(xts,is.xts)
+importFrom(xts,xts)
+importFrom(zoo,index)
 importFrom(zoo,rollapply)
