--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: Rmultifractional
+Package: Rmfrac
 Type: Package
 Title: Simulation and analyses of multifractional processes
 Version: 0.1.0
