--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,11 @@ S3method(autoplot,est)
 S3method(autoplot,hc_hurst)
 S3method(autoplot,k_hurst)
 S3method(autoplot,mp)
-export(A.excursion)
+export(Bbridge)
 export(Bm)
-export(FBM)
+export(FBbridge)
+export(FBm)
+export(FGn)
 export(GHBMP)
 export(Hurst)
 export(LFD)
@@ -24,14 +26,15 @@ export(cross_T)
 export(cross_mean)
 export(cross_rate)
 export(est_cov)
+export(exc_Area)
 export(hclust_hurst)
 export(kmeans_hurst)
 export(long_streak)
 export(mean_streak)
 export(shinyapp_sim)
-export(sim_FGN)
 export(sojourn)
 importFrom(doParallel,registerDoParallel)
+importFrom(fields,image.smooth)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(ggplot2,aes)
@@ -42,7 +45,8 @@ importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
-importFrom(ggplot2,geom_ribbon)
+importFrom(ggplot2,geom_polygon)
+importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,geom_smooth)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
