--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,17 @@
 Package: Rmfrac
 Type: Package
-Title: Simulation and analyses of multifractional processes
+Title: Simulation and statistical analyses of multifractional processes
 Version: 0.1.0
+Authors@R:c(person("Andriy", "Olenko", email = "a.olenko@latrobe.edu.au", role = "aut"),
+        person("Nemini", "Samarakoon", email = "neminisamarakoon95@gmail.com", role = c("aut", "cre")))
 Author: Andriy Olenko, Nemini Samarakoon 
-Maintainer: Nemini Samarakoon <NWijesingheS@ltu.edu.au> 
-Description: Simulation of the Guassian Haar Based Multifractional Processes (GHBMP). Estimation of Hurst functions, clustering realisations based on the Hurst functions and several functions to estimate and plot characteristics of the processes.
+Maintainer: Nemini Samarakoon <neminisamarakoon95@gmail.com> 
+Description: Simulation of multifractional Processes. Estimation of Hurst functions and local fractal dimension. Clustering realisations based on the Hurst functions and several functions to estimate and plot geometric statistics of the processes and time series.
 License: GPL-3
 Encoding: UTF-8
 Imports: parallel, parallelly, ggplot2, zoo, matrixStats, proxy, rlang, stats, foreach, doParallel, plotly, shiny, graphics, shinycssloaders, xts
 LazyData: false
 RoxygenNote: 7.3.1
 Roxygen: list(markdown = TRUE)
+URL: https://github.com/Nemini-S/Rmfrac
+BugReports: https://github.com/Nemini-S/Rmfrac/issues
