--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,7 +32,7 @@ export(hclust_hurst)
 export(kmeans_hurst)
 export(long_streak)
 export(mean_streak)
-export(plot_ts_est)
+export(plot_tsest)
 export(shinyapp_sim)
 export(sojourn)
 importFrom(doParallel,registerDoParallel)
@@ -71,6 +71,7 @@ importFrom(proxy,dist)
 importFrom(rlang,.data)
 importFrom(shiny,runApp)
 importFrom(shinycssloaders,withSpinner)
+importFrom(stats,aggregate)
 importFrom(stats,approx)
 importFrom(stats,as.dendrogram)
 importFrom(stats,cutree)
