--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,8 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,sec_axis)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,vars)
 importFrom(graphics,plot)
@@ -71,6 +73,7 @@ importFrom(proxy,dist)
 importFrom(rlang,.data)
 importFrom(shiny,runApp)
 importFrom(shinycssloaders,withSpinner)
+importFrom(stats,IQR)
 importFrom(stats,aggregate)
 importFrom(stats,approx)
 importFrom(stats,as.dendrogram)
@@ -79,10 +82,9 @@ importFrom(stats,hclust)
 importFrom(stats,kmeans)
 importFrom(stats,loess)
 importFrom(stats,na.omit)
+importFrom(stats,quantile)
 importFrom(stats,rect.hclust)
 importFrom(stats,rnorm)
 importFrom(stats,toeplitz)
-importFrom(xts,is.xts)
-importFrom(xts,xts)
 importFrom(zoo,index)
 importFrom(zoo,rollapply)
