--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,5 +86,7 @@ importFrom(stats,quantile)
 importFrom(stats,rect.hclust)
 importFrom(stats,rnorm)
 importFrom(stats,toeplitz)
+importFrom(utils,head)
+importFrom(utils,tail)
 importFrom(zoo,index)
 importFrom(zoo,rollapply)
